--- a/frontend.yaml
+++ b/frontend.yaml
@@ -26,7 +26,7 @@
     - name: Download web artifact
       ansible.builtin.get_url:
         url: https://expense-artifacts.s3.amazonaws.com/expense-frontend-v2.zip 
-        dest: /tmp
+        dest: /tmp/frontend.zip
 
     - name: Extract web artifact
       ansible.builtin.unarchive:
