--- a/frontend.yaml
+++ b/frontend.yaml
@@ -1,45 +1,42 @@
-- name: Install web component
+- name: configure frontend server
   hosts: frontend
   become: yes
   tasks:
-    - name: Install NGINX
-      ansible.builtin.dnf:
-        name: nginx
-        state: installed
+  - name: install nginx server
+    ansible.builtin.package:
+      name: nginx
+      state: present
+  - name: start nginx server
+    ansible.builtin.service:
+      name: nginx
+      state: started
+      enabled: yes
+  - name: remove html directory
+    ansible.builtin.file:
+      path: /usr/share/nginx/html
+      state: absent
+  - name: create html directory
+    ansible.builtin.file:
+      path: /usr/share/nginx/html
+      state: directory
 
-    - name: Start and enable NGINX
-      ansible.builtin.service:
-        name: nginx
-        state: started
-        enabled: yes
+  - name: download the frontend code
+    ansible.builtin.get_url:
+      url: https://expense-builds.s3.us-east-1.amazonaws.com/expense-frontend-v2.zip
+      dest: /tmp/frontend.zip
 
-    - name: Remove default HTML directory
-      ansible.builtin.file:
-        path: /usr/share/nginx/html
-        state: absent
+  - name: extract the code
+    ansible.builtin.unarchive:
+      src: /tmp/frontend.zip #by default ansible thinks this is in ansible server
+      dest: /usr/share/nginx/html
+      remote_src: yes
 
-    - name: Create new HTML directory
-      ansible.builtin.file:
-        path: /usr/share/nginx/html
-        state: directory
+  - name: copy expense conf
+    ansible.builtin.copy:
+      src: expense.conf
+      dest: /etc/nginx/default.d/expense.conf
 
-    - name: Download web artifact
-      ansible.builtin.get_url:
-        url: https://expense-artifacts.s3.amazonaws.com/expense-frontend-v2.zip 
-        dest: /tmp/frontend.zip
-
-    - name: Extract web artifact
-      ansible.builtin.unarchive:
-        src: /tmp/frontend.zip
-        dest: /usr/share/nginx/html
-        remote_src: yes
-
-    - name: Copy Roboshop NGINX configuration
-      ansible.builtin.copy:
-        src: expense.conf
-        dest: /etc/nginx/default.d/expense.conf
-
-    - name: Restart NGINX
-      ansible.builtin.service:
-        name: nginx
-        state: restarted
+  - name: restart nginx
+    ansible.builtin.service:
+      name: nginx
+      state: restarted
