--- a/backend.yaml
+++ b/backend.yaml
@@ -66,7 +66,7 @@
       state: import
 
   - name: daemon reload
-    ansible.builtin.systemd_service:
+    ansible.builtin.systemd:
       daemon_reload: true
       state: restarted
       name: backend
