--- a/mysql.yaml
+++ b/mysql.yaml
@@ -13,5 +13,10 @@
         state: started
         enabled: true
 
-    - name: loging into mysql-server
-      ansible.builtin.command: mysql_secure_installation --set-root-pass ExpenseApp@1
+    - name: Ensure MySQL root user has password
+      community.mysql.mysql_user:
+        name: root
+        host: localhost
+        password: "ExpenseApp@1"
+        login_unix_socket: /var/lib/mysql/mysql.sock
+        state: present
