--- a/mysql.yaml
+++ b/mysql.yaml
@@ -13,6 +13,11 @@
         state: started
         enabled: true
 
+    - name: Install PyMySQL (required for Ansible MySQL modules)
+      ansible.builtin.pip:
+        name: PyMySQL
+        executable: pip3
+
     - name: Ensure MySQL root user has password
       community.mysql.mysql_user:
         name: root
@@ -20,3 +25,4 @@
         password: "ExpenseApp@1"
         login_unix_socket: /var/lib/mysql/mysql.sock
         state: present
+
