--- a/mysql.yaml
+++ b/mysql.yaml
@@ -21,7 +21,7 @@
     - name: Ensure MySQL root user has password
       community.mysql.mysql_user:
         name: root
-        host: localhost
+        host: "mysql.joindevops.fun"
         password: "ExpenseApp@1"
         login_unix_socket: /var/lib/mysql/mysql.sock
         state: present
