--- a/backend.yaml
+++ b/backend.yaml
@@ -59,8 +59,8 @@
   - name: import mysql data
     community.mysql.mysql_db:
       login_user: root
-      login_password: ExpenseApp@1
-      login_host: mysql.joindevops.fun
+      login_password: "ExpenseApp@1"
+      login_host: "mysql.joindevops.fun"
       target: /app/schema/backend.sql
       name: all
       state: import
